--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "concurrently": "^5.1.0",
     "config": "^3.2.5",
     "express": "^4.21.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "9.0.0",
     "mongoose": "^5.13.20"
   },
   "devDependencies": {
