--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,8 @@
   "overrides": {
     "nth-check": "^2.1.1",
     "postcss": "^8.4.31",
-    "webpack-dev-server": "^5.2.1"
+    "webpack-dev-server": "^5.2.1",
+    "compression": "^1.8.1",
+    "on-headers": "^1.1.0"
   }
 }
