--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "postcss": "^8.4.31",
     "webpack-dev-server": "^5.2.1",
     "compression": "^1.8.1",
-    "on-headers": "^1.1.0"
+    "on-headers": "^1.1.0",
+    "http-proxy-middleware": "^2.0.9"
   }
 }
